--- a/BontoBuyWebApplication/BontoBuyWebApplication.csproj
+++ b/BontoBuyWebApplication/BontoBuyWebApplication.csproj
@@ -172,6 +172,14 @@
     <Compile Include="Migrations\201510171755316_editTableName.Designer.cs">
       <DependentUpon>201510171755316_editTableName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201510180303081_updateDb.cs" />
+    <Compile Include="Migrations\201510180303081_updateDb.Designer.cs">
+      <DependentUpon>201510180303081_updateDb.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201510180426522_addSupplierValidation.cs" />
+    <Compile Include="Migrations\201510180426522_addSupplierValidation.Designer.cs">
+      <DependentUpon>201510180426522_addSupplierValidation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -205,7 +213,9 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -240,6 +250,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Account\RegisterSupplier.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201510171751058_InitialCreate.resx">
@@ -248,6 +259,12 @@
     <EmbeddedResource Include="Migrations\201510171755316_editTableName.resx">
       <DependentUpon>201510171755316_editTableName.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201510180303081_updateDb.resx">
+      <DependentUpon>201510180303081_updateDb.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201510180426522_addSupplierValidation.resx">
+      <DependentUpon>201510180426522_addSupplierValidation.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -255,6 +272,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\AccountManagement\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
