--- a/BontoBuyWebApplication/BontoBuyWebApplication.csproj
+++ b/BontoBuyWebApplication/BontoBuyWebApplication.csproj
@@ -201,6 +201,7 @@
     <Content Include="App_Data\BontoBuyWebApplicationDb_log.ldf">
       <DependentUpon>BontoBuyWebApplicationDb.mdf</DependentUpon>
     </Content>
+    <Content Include="Content\Admin\Site.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -260,18 +261,14 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Account\RegisterSupplier.cshtml" />
     <Content Include="Views\Account\RegisterAdmin.cshtml" />
-    <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Account\LoginSupplier.cshtml" />
     <Content Include="Views\Account\LoginAdmin.cshtml" />
     <Content Include="Views\Supplier\Index.cshtml" />
-    <Content Include="Views\Admin\Create.cshtml" />
-    <Content Include="Views\Admin\Delete.cshtml" />
-    <Content Include="Views\Admin\Details.cshtml" />
-    <Content Include="Views\Admin\Edit.cshtml" />
     <Content Include="Views\AdminSupplier\Delete.cshtml" />
     <Content Include="Views\AdminSupplier\Details.cshtml" />
     <Content Include="Views\AdminSupplier\Edit.cshtml" />
     <Content Include="Views\AdminSupplier\Index.cshtml" />
+    <Content Include="Views\Shared\AdminLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201510171751058_InitialCreate.resx">
