--- a/BontoBuyWebApplication/BontoBuyWebApplication.csproj
+++ b/BontoBuyWebApplication/BontoBuyWebApplication.csproj
@@ -207,19 +207,10 @@
     <Compile Include="Migrations\201510270343195_editedCustomer.Designer.cs">
       <DependentUpon>201510270343195_editedCustomer.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201511081709353_addProduct.cs" />
-    <Compile Include="Migrations\201511081709353_addProduct.Designer.cs">
-      <DependentUpon>201511081709353_addProduct.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201511081716159_AddedFkProduct.cs" />
-    <Compile Include="Migrations\201511081716159_AddedFkProduct.Designer.cs">
-      <DependentUpon>201511081716159_AddedFkProduct.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\ProductType\Product.cs" />
     <Compile Include="Models\UserRole\Admin.cs" />
     <Compile Include="Models\UserRole\Customer.cs" />
     <Compile Include="Models\UserRole\Supplier.cs" />
@@ -312,6 +303,7 @@
     <Content Include="Views\Home\Product.cshtml" />
     <Content Include="Views\Customer\Edit.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
+    <Content Include="Views\Shared\SupplierLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201510171751058_InitialCreate.resx">
@@ -343,12 +335,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201510270343195_editedCustomer.resx">
       <DependentUpon>201510270343195_editedCustomer.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201511081709353_addProduct.resx">
-      <DependentUpon>201511081709353_addProduct.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201511081716159_AddedFkProduct.resx">
-      <DependentUpon>201511081716159_AddedFkProduct.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
